# goodeye-cli

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
src/goodeye_cli/: __init__.py  __main__.py  app.py  auth_flows.py  client.py  config.py  errors.py  wire.py
src/goodeye_cli/commands/: __init__.py  auth.py  design.py  login.py  logout.py  me.py  register.py  signup.py  skills.py  teams.py  templates.py  whoami.py  workflows.py
tests/: conftest.py  test_auth_flows.py  test_client.py  test_commands_auth.py  test_commands_me.py  test_commands_meta.py  test_commands_skills.py  test_commands_teams.py  test_commands_templates.py  test_commands_workflows.py  test_config.py  test_teach_workflow_cli.py
